--- a/index.html
+++ b/index.html
@@ -28,18 +28,28 @@
     <!-- You may remove the extra comments when you finish -->
 
     <!-- h1 -->
-    Hello World
+    <h1>Hello World</h1>
 
     <!-- p -->
     <!-- abbr around the word HTML -->
-    We're learning how to do awesome HTML things!
+   <p> We're learning how to do awesome HTML things!</p>
 
     <!-- h2 -->
-    Learning Objectives
+    <h2>Learning Objectives</h2>
 
     <!-- p -->
-    Here are the official learning objectives for the course:
-
+    <p></p>Here are the official learning objectives for the course:
+<ui>
+  <li>    Ability to develop web interfaces using following technologies
+  </li>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavaScript</li>
+  <li>Ability to work and coordinate in group(s) for projects
+  </li>
+  <li>Ability to independently explore resources for web pages and use in
+    development of web interfaces</li>
+</ui>
     <!-- Below are three list items-->
     Ability to develop web interfaces using following technologies
     <!-- Below are three nested list items -->
